chore: docs updates for 1.2.x

--- a/pages/usage/plugins.mdx
+++ b/pages/usage/plugins.mdx
@@ -4,24 +4,32 @@ Elite Observatory Core was built to be highly modular and does essentially nothi
 
 Currently installed plugins are listed at the top of the Core tab, along with the type(s) of plugins they are, and the installed version number. If any errors prevent the loading of a plugin then these might be replaced with the plugin filename and the nature of the error instead.
 
-![Plugin List](/plugin-list.png)
+## Plugin List
 
-The checkboxes on the left can be used to toggle individual plugins on or off, if needed.
+![Plugin List](/plugin-list-with-menu.png)
 
-Along the bottom of this list are three buttons:
+The checkboxes in the "Enabled" column can be used to toggle individual plugins on or off, if needed.
+
+The rightmost button on each row of the list opens a menu with the following options:
 
 *Plugin Settings:* Opens the settings window of the currently selected plugin. The specifics of this window will vary by plugin.
 
-*Open Plugin Data Folder:* Some plugins, such as [Herald](/usage/plugins/herald), need to store local files as part of their normal operation. This button will open the storage location for the currently selected plugin should you need to interact with those files. Generally this should only be necessary if something has gone wrong.
+*About Plugin:* Opens an informatin window about the plugin with links to other related resources, if available.
 
-*Open Plugins Folder:* Opens the folder into which plugins are placed when installed. Useful when manually installing plugins to quickly navigate to that location, or when plugins need to be removed.
+*Open Plugin Data Folder:* Some plugins need to store local files as part of their normal operation. This button will open the storage location for the currently selected plugin should you need to interact with those files. Generally this should only be necessary if something has gone wrong.
 
+## Plugin Tabs
+
+![Plugin Tabs](/plugin-tab-menu.png)
+
+In addition to clicking a tab to switch between plugins right-clicking opens a context menu. The options in this menu are the same as those presented in the plugin list menu detailed above, plus the following:
+
+*Popout Plugin:* Opens the plugin interface in a new window, allowing for independent placement and simultaneous viewing of multiple plugins.
 
 ## Core Plugins
 
 * [Explorer](/usage/plugins/explorer): Astronomical feature cataloguing.
 * [Botanist](/usage/plugins/botanist): Simple biological signal cataloguing.
-* [Herald](/usage/plugins/herald): High-quality spoken notifications.
 
 ## Third-Party Plugins
 
