--- a/pages/usage.mdx
+++ b/pages/usage.mdx
@@ -13,10 +13,22 @@ Here you'll find documentation for getting the Observatory set up, as well as de
 
 ## Installation
 
-  * Download the latest version from [the releases page](/release).
+### Installed Version
+
+The installed version can be installed in any location but will store all its settings in a user appdata folder. It will also create start menu or desktop shortcuts, and set up a file association with `.eop` files to allow easier installation of plugins.
+
+  * Download the latest `ObservatorySetup.exe` from [the releases page](/release).
   * Double-click on the downloaded ObservatorySetup.exe to install.
     * During setup you will be asked which supplementary [plugins](/usage/plugins) (if any) you would like to install.
   * Once setup has finished, launch Elite Observatory as you would with any other app.
+
+### Portable Version
+
+The portable version can be placed anywhere and keeps all it's configuration and other files in the same location for easy migration between system. The portable version will not automatically create any application shortcuts, nor does it create a file association for `.eop` files.
+
+  * Download the latest `ObservatoryPortable.zip` from [the releases page](/release).
+  * Extract the archive to the location of your choice
+  * Launch `ObservatoryCore.exe`
 
 ## Quick Start
 
@@ -27,9 +39,6 @@ If you'd like to scan through your past discoveries switch to the "Explorer" tab
 ## Detailed Usage
 
 import Image from 'next/image'
-
-![An example of Observatory Core's layout.](/observatorycore-example.png)
-*An example of Observatory Core's main page.*
 
 Once Observatory is started, you will a tab for each installed plugin along the top.
 
@@ -45,35 +54,41 @@ Once Observatory is started, you will a tab for each installed plugin along the 
 
 * **Read All:** Reads all Elite Dangerous journal files and loads all historical events and activity. Some plugins may require this as an initial priming step to populate player information.
 
+* **About:** The `ℹ️` button on the bottom left. Opens an "about" window with information about Oberservatory, links to documentation, donation links, and a list of current paid patreon members as of that release.
+
+### Plugin Tabs
+
+The tabs along the top of the application window each correspond to an installed plugin (except for the [Core Tab](#core-tab)).
+
+For specific information about interacting with plugins, see [the plugin usage page](/usage/plugins).
+
 ### Core Tab
 
-The Core tab is the main location for configuring Observatory and [its plugins](/usage/plugins). 
+![An example of Observatory Core's layout.](/observatorycore-example.png)
+*An example of Observatory Core's main page.*
 
-#### Core Settings
+The Core tab is the main location for accessing the configuration of Observatory and [its plugins](/usage/plugins). 
 
-![Core Settings](/core-settings.png)
+#### Plugin list
 
-This block of settings controls the general behaviour of Observatory and functionality not specific to any plugin.
+The main feature of the Core tab is the plugin list. This displays various pieces of information about each plugin, whether the plugin is enabled, and provides a button to open the plugin menu to see additional information and options.
 
-* **Journal Folder:** Shows the location your journal files are currently being read from. Double-clicking the path will allow you to select a new one, but this should be unnecessary in the overwhelming majority of cases.
+For detailed information about plugins see [the plugin usage page](/usage/plugins).
 
-* **Export Format:** Chooses the format of exported files between tab-separated `.csv` and office open XML `.xlsx` (commonly referred to as excel format). Plugins can override this selection and export in other formats if necessary.
+#### Bottom Display
 
-* **Theme:** Select the visual theme for the application. Support for different themes within plugins may vary.
+![Bottom Display of Core Tab](/core-buttons.png)
 
-* **Add Theme:** Allows users to add their own custom themes. See [the custom theme documentation](/usage/themes) for details.
+This area shows some simple status infomation about the current state of Observatory's log monitoring, allowing quick visual confirmation that journals are being read.
 
-* **Volume:** Adjust volume of audible notifications and sounds played by plugins.
+In addition it has the following two buttons:
 
-* **Audio Device:** Selects the audio output device used for all sounds.
-
-* **Start Monitor On Launch:** Enables realtime monitoring automatically as soon as Observatory is launched.
-
-* **Read All On Launch:** Immediately performs a full read of all journals as soon as Observatory is launched.
+* **Plugin Folder:** Opens the folder which contains all currently installed plugins. From here you can install new plugins by placing `.eop`, `.zip`, or `.dll` files in this folder, or uninstall plugins by deleting their associated `.dll`.
+* **Core Settings:** Opens the [Core Settings Window](/usage/settings).
 
 ## Plugins
 
-There are many optional plugins available for the Observatory, designed to supplement and enhance the core application. 
+There are many optional plugins available for Observatory, designed to supplement and enhance the core application. 
 
 By default, three plugins are installed along with Observatory:
 
