chore: minor fixes, remove herald mentions

--- a/pages/usage.mdx
+++ b/pages/usage.mdx
@@ -15,16 +15,16 @@ Here you'll find documentation for getting the Observatory set up, as well as de
 
 ### Installed Version
 
-The installed version can be installed in any location but will store all its settings in a user appdata folder. It will also create start menu or desktop shortcuts, and set up a file association with `.eop` files to allow easier installation of plugins.
+The installed version can be installed in any location but will store its settings in a user appdata folder. It will also create start menu or desktop shortcuts, and set up a file association with `.eop` files to allow easier installation of plugins.
 
   * Download the latest `ObservatorySetup.exe` from [the releases page](/release).
-  * Double-click on the downloaded ObservatorySetup.exe to install.
+  * Double-click on the downloaded `ObservatorySetup.exe` to install.
     * During setup you will be asked which supplementary [plugins](/usage/plugins) (if any) you would like to install.
-  * Once setup has finished, launch Elite Observatory as you would with any other app.
+  * Once setup has finished, launch Elite Observatory as you would with any other application.
 
 ### Portable Version
 
-The portable version can be placed anywhere and keeps all it's configuration and other files in the same location for easy migration between system. The portable version will not automatically create any application shortcuts, nor does it create a file association for `.eop` files.
+The portable version can be placed anywhere and keeps all its configuration and other files in the same location for easy migration between systems. The portable version will not automatically create any application shortcuts, nor does it create a file association for `.eop` files.
 
   * Download the latest `ObservatoryPortable.zip` from [the releases page](/release).
   * Extract the archive to the location of your choice
@@ -94,7 +94,6 @@ By default, three plugins are installed along with Observatory:
 
   * [Explorer](/usage/plugins/explorer): Finds interesting astronomical features while exploring
   * [Botanist](/usage/plugins/botanist): Tracks planetary biological signals scanned on foot.
-  * [Herald](/usage/plugins/herald): Enables high-quality cloud-based speech notifications.
 
 Additional plugins can be downloaded as .eop files and can generally be installed by simply double-clicking the file.
 
