--- a/pages/usage/settings.mdx
+++ b/pages/usage/settings.mdx
@@ -71,7 +71,7 @@ This block of settings controls the appearance and behaviour of the built-in "to
 
 > **Note:** Voice notifications can be overridden in their entirety by notifications plugins. When this happens these settings are unavailable and replaced with a message indicating which plugin has done so.
 
-This block of settings controls the appearance and behaviour of the built-in voice notifications. These notifications use basic Windows text-to-speech. In a default Observatory installation they are overridden by [Herald](/usage/plugins/herald) which provides much higher quality voices.
+This block of settings controls the appearance and behaviour of the built-in voice notifications. These notifications use basic Windows text-to-speech.
 
 ![Voice Notification Settings](/voice-settings.png)
 
