chore: link fjk plugins to gh wiki page

--- a/pages/usage/plugins.mdx
+++ b/pages/usage/plugins.mdx
@@ -60,10 +60,10 @@ Precise installation instructions can be found for any given plugin on its own p
 
 ### Navigation
 
-  * [Fleet Commander](/usage/plugins/thirdparty/fleetcommander): Comprehensive fleet carrier information and routing tool.
-  * [Helm](/usage/plugins/thirdparty/helm) `(BETA)`: A flight assistant providing heads-up notifications, flight information and statistics.
+  * [Fleet Commander](https://github.com/fredjk-gh/ObservatoryPlugins/wiki): Comprehensive fleet carrier information and routing tool.
+  * [Helm](https://github.com/fredjk-gh/ObservatoryPlugins/wiki) `(BETA)`: A flight assistant providing heads-up notifications, flight information and statistics.
 
 ### Data and Statistics
 
-  * [Archivist](/usage/plugins/thirdparty/archivist) `(BETA)`: Journal archive and browser.
-  * [Stat Scanner](/usage/plugins/thirdparty/statscanner): Personal bests and galactic record information.
+  * [Archivist](https://github.com/fredjk-gh/ObservatoryPlugins/wiki) `(BETA)`: Journal archive and browser.
+  * [Stat Scanner](https://github.com/fredjk-gh/ObservatoryPlugins/wiki): Personal bests and galactic record information.
