chore: adjust wording to avoid implication that Core is not Elite Observatory

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -12,7 +12,7 @@ Tool for reading/monitoring Elite Dangerous journals for interesting objects.
 Please note that Observatory Core is a perpetual work-in-progress. New features are being developed and even the current ones may experience a degree of flux.
 
 ## What Is It?
-Observatory Core differs from the original Elite Observatory in that it is a fully generic reader for the Elite Dangerous journal files, passing those events along to [plugins](/usage/plugins) to do the actual work.
+Elite Observatory Core differs from the previous versions of Elite Observatory in that it is a fully generic reader for the Elite Dangerous journal files, passing those events along to [plugins](/usage/plugins) to do the actual work.
 
 Observatory will attempt to locate your Elite Dangerous journal location in its default location, though other locations can be specified from the settings in the "Core" application tab by double-clicking the journal path at the bottom.
 
