--- a/pages/release/experimental.mdx
+++ b/pages/release/experimental.mdx
@@ -5,9 +5,21 @@ description: Experimental Builds of Elite Observatory Core
 
 # Wine-Friendly Build
 
-> **Wine 9.0+ is required.** Prior versions have issues with .NET 8. If using Lutris you may need to change the application config if the default Wine environment is something older.
+> As of version 1.2.5 **Wine 10.0+ is required.** For previous versions you will need **Wine 9.0+**. Prior versions have issues with .NET 8. If using Lutris you may need to change the application config if the default Wine environment is something older.
 
-## Latest - v1.1.4 - Non-Blocking Error
+## Latest 
+
+### v1.2.5 - Pop a Tab
+
+Release versions:
+  * [Installer](https://xjph.net/Observatory/1.2.5/WINE-ObservatorySetup.exe)
+  * [Portable](https://xjph.net/Observatory/1.2.5/WINE-ObservatoryPortable.zip)
+
+I have only personally verified this using Wine 10.0-rc5. Please let me know if you find other configurations that work. Most notably I've not tested it using SteamOS's Proton or Proton-GE.
+
+## Previous Builds
+
+### v1.1.4 - Non-Blocking Error
 
 Release versions:
   * [Installer](https://xjph.net/Observatory/1.1.4/WINE-ObservatorySetup.exe)
