--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -7,6 +7,16 @@ description: Tool for reading/monitoring Elite Dangerous journals for interestin
 
 ## Latest 
 
+### v1.2.6 - Tab Order Bugfix
+
+Release versions:
+  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.2.6/ObservatorySetup.exe)
+  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.2.6/ObservatoryPortable.zip)
+
+Quick bugfix to address a reported possible crash when loading saved tab order.
+
+The portable archive also no longer includes an all-defaults config file which would inadvertantly overwrite existing configs.
+
 ### v1.2.5 - Pop a Tab
 
 Release versions:
