chore: usage page markdown

--- a/pages/usage.mdx
+++ b/pages/usage.mdx
@@ -8,7 +8,7 @@ Here you'll find documentation for getting the Observatory set up, as well as de
 
   * Read and analyse all CMDR journal files
   * Configure pop-up and/or voice notifications
-  * Choose from a wide array of [[startnew#Plugins|plugins]] providing expansive functionality
+  * Choose from a wide array of [plugins](/usage/plugins) providing expansive functionality
   * Define custom search/reporting criteria using Lua
 
 ## Installation
