--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -7,6 +7,16 @@ description: Tool for reading/monitoring Elite Dangerous journals for interestin
 
 ## Latest 
 
+### v1.2.9 - Trailblazing
+
+Release versions:
+  * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.2.9/ObservatorySetup.exe)
+  * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.2.9/ObservatoryPortable.zip)
+
+A small catchup release to add support for journal changes in and after the Trailblazers and Powerplay 2.0 updates, plus some assored missed values. If you were experiencing crashes in and around the bubble and colony systems this should resolve it.
+
+Huge thanks for fredjk for doing most of the lifting on this one.
+
 ### v1.2.8 - Persistent Fixing
 
 Release versions:
