--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -13,7 +13,7 @@ Release versions:
   * [Installer](https://github.com/Xjph/ObservatoryCore/releases/download/v1.2.9/ObservatorySetup.exe)
   * [Portable](https://github.com/Xjph/ObservatoryCore/releases/download/v1.2.9/ObservatoryPortable.zip)
 
-A small catchup release to add support for journal changes in and after the Trailblazers and Powerplay 2.0 updates, plus some assored missed values. If you were experiencing crashes in and around the bubble and colony systems this should resolve it.
+A small catch-up release to add support for journal changes in and after the Trailblazers and Powerplay 2.0 updates, plus some assorted missed values. If you were experiencing crashes in and around the bubble and colony systems this should resolve it.
 
 Huge thanks for fredjk for doing most of the lifting on this one.
 
