--- a/pages/release.mdx
+++ b/pages/release.mdx
@@ -15,7 +15,7 @@ Release versions:
 
 A small catch-up release to add support for journal changes in and after the Trailblazers and Powerplay 2.0 updates, plus some assorted missed values. If you were experiencing crashes in and around the bubble and colony systems this should resolve it.
 
-Huge thanks for fredjk for doing most of the lifting on this one.
+Huge thanks to fredjk for doing most of the lifting on this one.
 
 ### v1.2.8 - Persistent Fixing
 
