feat: the return of Herald

--- a/pages/usage/plugins.mdx
+++ b/pages/usage/plugins.mdx
@@ -31,6 +31,10 @@ In addition to clicking a tab to switch between plugins right-clicking opens a c
 * [Explorer](/usage/plugins/explorer): Astronomical feature cataloguing.
 * [Botanist](/usage/plugins/botanist): Simple biological signal cataloguing.
 
+## Optional Plugins
+
+* [Herald](/usage/plugins/herald): Improved voice notifications.
+
 ## Third-Party Plugins
 
 Observatory also exposes an internal set of interfaces allowing other developers to create and distribute their own plugins. What follows is a partial list of those currently available. If you know of any not on this list reach out via the [forums](https://forums.frontier.co.uk/threads/elite-observatory-search-your-journal-for-potentially-interesting-objects-or-notify-you-of-new-ones-on-the-fly-while-exploring.521544/) or [discord](https://discord.gg/RAFDHsY).
