chore: herald patreon links

--- a/pages/release/herald.mdx
+++ b/pages/release/herald.mdx
@@ -15,7 +15,7 @@ Release versions:
 
 The long-awaited return of [the Herald plugin](/usage/plugins/herald)!
 
-Last November I was forced to take Herald offline; a sudden spike in usage caused the cost of providing the Azure based voices to become unsustainable. At the time I said that at some future date it may return as a Patreon bonus for those supporting the project, and now that day has arrived. Anyone backing the project on Patreon *at any tier* will have access to Herald via the Observatory API.
+Last November I was forced to take Herald offline; a sudden spike in usage caused the cost of providing the Azure based voices to become unsustainable. At the time I said that at some future date it may return as a Patreon bonus for those supporting the project, and now that day has arrived. Anyone [backing the project on Patreon *at any tier*](https://patreon.com/vithigar) will have access to Herald via the Observatory API.
 
 Users with their own Azure Cognitive Services account can use Herald with their own subscription key, avoiding the need for a Patreon pledge should you already have access to Azure Cognitive Services.
 
