--- a/pages/usage/plugins/herald.mdx
+++ b/pages/usage/plugins/herald.mdx
@@ -2,7 +2,7 @@
 
 Herald is an optional [plugin](/usage/plugins) for Observatory which provides higher quality voice notifications using Azure Cognitive Services or an OpenAI voice model.
 
-*Note: This plugin requires either an active Patreon pledge or for the user to provide their own Azure Cognitive Services subscription or access to a speech service providing an OpenAI speech API endpoint.*
+*Note: This plugin requires either [an active Patreon pledge](https://patreon.com/vithigar) or for the user to provide their own Azure Cognitive Services subscription or access to a speech service providing an OpenAI speech API endpoint.*
 
 ## Installation
 
