--- a/pages/release/herald.mdx
+++ b/pages/release/herald.mdx
@@ -9,8 +9,12 @@ description: Plugin for improved voice notifications.
 
 ### v2.0.0 - Herald Two-Point-Oh
 
+### v2.0.1
+
+Minor bugfix release to fix lack of default selection for API.
+
 Release versions:
-  * [EOP](https://xjph.net/Observatory/Herald/2.0.0/ObservatoryHerald.eop)
+  * [EOP](https://xjph.net/Observatory/Herald/2.0.1/ObservatoryHerald.eop)
 
 
 The long-awaited return of [the Herald plugin](/usage/plugins/herald)!
