--- a/pages/release/herald.mdx
+++ b/pages/release/herald.mdx
@@ -7,11 +7,9 @@ description: Plugin for improved voice notifications.
 
 ## Latest 
 
-### v2.0.0 - Herald Two-Point-Oh
+### v2.0.1 - Herald Two-Point...One?!
 
-### v2.0.1
-
-Minor bugfix release to fix lack of default selection for API.
+Minor bugfix release to fix lack of default selection for API. 2.0.0 notes below.
 
 Release versions:
   * [EOP](https://xjph.net/Observatory/Herald/2.0.1/ObservatoryHerald.eop)
