--- a/pages/release/herald.mdx
+++ b/pages/release/herald.mdx
@@ -7,12 +7,12 @@ description: Plugin for improved voice notifications.
 
 ## Latest 
 
-### v2.0.1 - Herald Two-Point...One?!
+### v2.0.2 - Herald Two-Point...Two?!
 
-Minor bugfix release to fix lack of default selection for API. 2.0.0 notes below.
+Bugfix release 2.0.2 fixes lack of default selection for API and broken direct Azure support. More general 2.0.x notes below.
 
 Release versions:
-  * [EOP](https://xjph.net/Observatory/Herald/2.0.1/ObservatoryHerald.eop)
+  * [EOP](https://xjph.net/Observatory/Herald/2.0.2/ObservatoryHerald.eop)
 
 
 The long-awaited return of [the Herald plugin](/usage/plugins/herald)!
