--- a/pages/release/herald.mdx
+++ b/pages/release/herald.mdx
@@ -7,7 +7,7 @@ description: Plugin for improved voice notifications.
 
 ## Latest 
 
-### v2.0.2 - Herald Two-Point...Two?!
+### v2.0.2 - Herald Two-Point Oh...Two?!
 
 Bugfix release 2.0.2 fixes lack of default selection for API and broken direct Azure support. More general 2.0.x notes below.
 
